--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,5 +56,6 @@
     {{{body}}}
   <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
   <script src="./dream.js"></script>
+  <script src="./lang.js"></script>
 </body>
 </html>
