Updated web page layout

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,17 @@
 <h1>DREAM STREAM</h1>
+<div id="lang"><label for="language">Language filter:</label>
+    <select name="language" id="language">
+      <option value="na">None</option>
+      <option value="en">English</option>
+      <option value="ru">Russian</option>
+      <option value="ko">Korean</option>
+    </select></div>
 <div id="jsonNull"></div>
 <table>
   <tr>
     <td></td>
-    <td><strong>Streamer</strong></td>
-    <td><strong>Solo MMR</strong></td>
+    <td><strong><br>Streamer</strong></td>
+    <td><strong>Solo<br>MMR</strong></td>
   </tr>
   <tr>
     <td><div id="logo0"></div></td>
@@ -58,16 +65,7 @@
   </tr>
 </table>
 <br>
-<div id="info"><p><label for="language">Select language filter:</label>
-    <select name="language" id="language">
-      <option value="na">None</option>
-      <option value="en">English</option>
-      <option value="ru">Russian</option>
-      <option value="ko">Korean</option>
-    </select></p>
-    <p>Dream Stream is a script written in Node.js that checks the
-  DOTA 2 leaderboards and the Twitch API to see who on the leaderboard is
-  currently streaming. Please check <a href="https://github.com/pauljickling/Dream-Stream">
-  the Github page</a> for Frequently Asked Questions. Dream Stream updates every
-  five minutes (or you can refresh the page).</p> <br><br><strong>Last updated:</strong> </div><div id="divTime"></div>
+<div id="info"><p>For more info please check <a href="https://github.com/pauljickling/Dream-Stream">Dream Stream Github</a></p>
+<strong>Updated every 5 min. Last update:</strong></div>
+<div id="divTime"></div>
 <h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license. Dota 2 is a registered trademark of Valve Corporation.</h6>
