--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,10 +27,10 @@
     table {
       margin: auto;
       border: .5px solid #666;
-      padding: 20px;}
+      padding: 10px;}
     td {
       text-align: left;
-      padding: .5em;}
+      padding: 0.5em;}
     @media only screen and (min-width: 980px) {
       #divTime,#info,h6#license {
         width: 33%;
@@ -38,14 +38,17 @@
     }
     #divTime {
       margin: auto;
-      padding: 1em;}
+      padding: .5em}
     #error {
       margin: auto;
       text-align: center;
       padding-bottom: 1em;}
     #info {
-      margin: auto;
-      padding-bottom: 1em;}
+      margin: auto;}
+    #lang {
+      text-align: center;
+      padding-bottom: 1em;
+    }
     h6#license {
       margin: auto;
       padding-top: 1em;}
