Changed license description

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -68,4 +68,4 @@
 <div id="info"><p>For more info please check <a href="https://github.com/pauljickling/Dream-Stream">Dream Stream Github</a></p>
 <strong>Updated every 5 min. Last update:</strong></div>
 <div id="divTime"></div>
-<h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license. Dota 2 is a registered trademark of Valve Corporation.</h6>
+<h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license.</h6>
