--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,9 @@
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 a {
   text-decoration: none;}
 a:link {
@@ -7,9 +13,9 @@ a:visited {
 a:hover {
   text-decoration: underline;}
 body {
-  margin: 0;
+  margin: 0 auto;
   background-color: #000;
-  font-family: sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 100%;
   color: #FFF;}
 h1 {
@@ -19,7 +25,7 @@ p {
   font-size: 1em;
   text-align: left;}
 table {
-  margin: auto;
+  margin: 0 auto;
   border: .5px solid #666;
   padding: 10px;}
 td {
@@ -30,15 +36,24 @@ td {
     width: 33%;
   }
 }
+
+.wrapper {
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
 #divTime {
-  margin: auto;
-  padding: .5em}
+  margin: 0 auto;
+  padding-top: 0.5em;}
 #error {
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
   padding-bottom: 1em;}
 #info {
-  margin: auto;}
+  margin: 0 auto;
+  max-width: 50%;
+  text-align: left;}
 #lang {
   text-align: center;
   padding-bottom: 1em;
