--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -65,7 +65,8 @@
   </tr>
 </table>
 <br>
-<div id="info"><p>For more info please check <a href="https://github.com/pauljickling/Dream-Stream">Dream Stream Github</a></p>
-<strong>Updated every 5 min. Last update:</strong></div>
-<div id="divTime"></div>
-<h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license.</h6>
+<div class="wrapper">
+  <div id="info"><p>More info at <a href="https://github.com/pauljickling/Dream-Stream">Dream Stream Github</a></p>
+  Updates every 5 min. Last updated at <span id="divTime"></span></div>
+  <h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license.</h6>
+</div>
