--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -66,7 +66,9 @@
 </table>
 <br>
 <div class="wrapper">
-  <div id="info"><p>More info at <a href="https://github.com/pauljickling/Dream-Stream">Dream Stream Github</a></p>
-  Updates every 5 min. Last updated at <span id="divTime"></span></div>
+  <p><div id="info">Last update: <span id="divTime"></span></p>
+  <p><a href="https://github.com/pauljickling/Dream-Stream">GitHub</a>  |  <a id="about">About</a></p></div>
+  <div data-role="popup" id="popupAbout">
+    <div id="popup">Dream Stream finds the Dota 2 players on the leaderboards that are currently streaming on Twitch, and lists them sorted by MMR.<span id="popup-btn-close">close</span></div>
   <h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license.</h6>
 </div>
