--- a/public/style.css
+++ b/public/style.css
@@ -31,11 +31,13 @@ table {
 td {
   text-align: left;
   padding: 0.5em;}
+  /*
 @media only screen and (min-width: 980px) {
   #divTime,#info,h6#license {
     width: 33%;
   }
 }
+*/
 
 .wrapper {
   width: 50%;
@@ -52,7 +54,8 @@ td {
   padding-bottom: 1em;}
 #info {
   margin: 0 auto;
-  max-width: 50%;
+  width: 33%;
+  max-width: 300px;
   text-align: left;}
 #lang {
   text-align: center;
@@ -60,4 +63,38 @@ td {
 }
 h6#license {
   margin: auto;
-  padding-top: 1em;}
+  padding-top: 1em;
+  width: 33%;
+  max-width: 300px;}
+
+#popup {
+  display: none;
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  width: 700px;
+  margin-left: -350px;
+  padding: 50px 30px;
+  background: #fff;
+  color: #333;
+  line-height: 30px;
+  border: 10px solid #150E2D;
+  z-index: 9999;
+}
+
+#popup-mobile {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: 30px 0 0;
+  width: 100%;
+}
+
+#popup-btn-close {
+  position: absolute;
+  top: 8px;
+  right: 14pxl
+  color: #4EBD79;
+  font-weight: bold;
+  text-transform: uppercase;
+}
