--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,5 +12,6 @@
   <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
   <script src="./dream.js"></script>
   <script src="./lang.js"></script>
+  <script src="./popup.js"></script>
 </body>
 </html>
