--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -69,6 +69,6 @@
   <p><div id="info">Last update: <span id="divTime"></span></p>
   <p><a href="https://github.com/pauljickling/Dream-Stream">GitHub</a>  |  <a id="about">About</a></p></div>
   <div data-role="popup" id="popupAbout">
-    <div id="popup">Dream Stream finds the Dota 2 players on the leaderboards that are currently streaming on Twitch, and lists them sorted by MMR.<span id="popup-btn-close">close</span></div>
+    <div id="popup">Dream Stream finds players on the Dota 2 leaderboards currently streaming on Twitch, and lists them by MMR.<span id="popup-btn-close">close</span></div>
   <h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license.</h6>
 </div>
