--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" media="screen and (min-width: 980px)">
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>DREAM STREAM!</title>
 </head>
 <body>
     {{{body}}}
-  <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
-  <script src="./dream.js"></script>
-  <script src="./lang.js"></script>
-  <script src="./popup.js"></script>
+<script src="./time.js"></script>
+<script src="./sort.js"></script>
+<script src="./lang.js"></script>
+<script src="./about.js"></script>
 </body>
 </html>
