test view update

--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,7 @@ p {
   padding-left: 10px;
   padding-right: 10px;
 }
-h4#license {
+#license {
   margin: auto;
   padding-top: 1em;
   text-align: center;
