--- a/views/test.handlebars
+++ b/views/test.handlebars
@@ -14,5 +14,5 @@
   <li class="nav-item"><a href="https://github.com/pauljickling/Dream-Stream">Github</a></li>
   <li class="nav-item" id="about">About</li>
 </ul>
-<h4 id=license>Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</h4>
+<div id=license>Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</h4>
 <div id="about-text">Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points. You can sort by either value.</div>
