Added About Popup

--- a/views/test.handlebars
+++ b/views/test.handlebars
@@ -14,5 +14,5 @@
   <li class="nav-item"><a href="https://github.com/pauljickling/Dream-Stream">Github</a></li>
   <li class="nav-item" id="about">About</li>
 </ul>
-<div id=license>Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</h4>
-<div id="about-text">Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points. You can sort by either value.</div>
+<div id=license>Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</div>
+<div id="about-text"><span id="close-about"><img src="./close.png"></span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points. You can sort by either value.</div>
