--- a/public/style.css
+++ b/public/style.css
@@ -65,15 +65,15 @@ p {
   padding-right: 10px;
 }
 #license {
-  margin: auto;
+  margin: 0 auto;
   padding-top: 1em;
-  text-align: center;
-  max-width: 300px;}
+  text-align: right;
+  max-width: 350px;}
 
 #about-text {
   background-color: white;
   color: black;
-  border: 5px solid purple;
+  border: 5px solid black;
   position: absolute;
   margin-left: 45%;
   margin-right: 45%;
@@ -81,6 +81,14 @@ p {
   top: 200px;
   font-size: 1.2em;
   visibility: hidden;
+}
+
+span#close-about {
+  float: right;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: -15px;
+  margin-right: -15px;
 }
 
 /*
