--- a/public/style.css
+++ b/public/style.css
@@ -6,13 +6,14 @@
 
 a {
   text-decoration: none;
-}
+  color: white;
+} /*
 a:link {
   color: #7db0e0;
 }
 a:visited {
   color: #d597e5;
-}
+} */
 a:hover {
   text-decoration: underline;
 }
@@ -26,6 +27,10 @@ body {
 h2 {
   font-size: 1.5em;
   margin-left: 20px;
+}
+img {
+  width: 100%;
+  border: 1px solid #d3d3d3;
 }
 li.nav-item:hover {
   text-decoration: underline;
@@ -42,11 +47,11 @@ p {
   margin: 10px;
   margin-left: 25%;
   margin-right: 25%;
-  grid-gap: 10px;
+  grid-gap: 40px;
   grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
 }
 .card {
-  border: 1px solid white;
+
   padding: 10px;
 }
 .navbar {
@@ -64,6 +69,7 @@ p {
   padding-left: 10px;
   padding-right: 10px;
 }
+/* should consider an auto display bottom */
 #license {
   margin: 0 auto;
   padding-top: 1em;
@@ -90,89 +96,3 @@ span#close-about {
   margin-top: -15px;
   margin-right: -15px;
 }
-
-/*
-
-old code below:
-
-table {
-  margin: 0 auto;
-  border: .5px solid #666;
-  padding: 10px;}
-td {
-  text-align: left;
-  padding: 0.5em;}
-
-.wrapper {
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
-}
-
-#about {
-  cursor: pointer;
-  color: #7db0e0;
-}
-
-#about:visited {
-  color: #d597e5;
-}
-
-#about:hover {
-  text-decoration: underline;
-}
-
-#divTime {
-  margin: 0 auto;
-  padding-top: 0.5em;}
-#error {
-  margin: 0 auto;
-  text-align: center;
-  padding-bottom: 1em;}
-#info {
-  margin: 0 auto;
-  width: 33%;
-  max-width: 300px;
-  text-align: left;}
-#lang {
-  text-align: center;
-  padding-bottom: 1em;
-}
-h6#license {
-  margin: auto;
-  padding-top: 1em;
-  width: 33%;
-  max-width: 300px;}
-
-#popup {
-  display: none;
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  width: 700px;
-  margin-left: -350px;
-  padding: 50px 30px;
-  background: #fff;
-  color: #333;
-  line-height: 30px;
-  border: 10px solid #150E2D;
-  z-index: 9999;
-}
-
-#popup-mobile {
-  position: relative;
-  top: 0;
-  left: 0;
-  margin: 30px 0 0;
-  width: 100%;
-}
-
-#popup-btn-close {
-  position: absolute;
-  top: 8px;
-  right: 14pxl
-  color: #4EBD79;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-*/
