--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,5 +11,6 @@
 <script src="./time.js"></script>
 <script src="./sort.js"></script>
 <script src="./about.js"></script>
+<script src="./loadjson.js"></script>
 </body>
 </html>
