--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,74 +1,16 @@
-<h1>DREAM STREAM</h1>
-<div id="lang"><label for="language">Language filter:</label>
-    <select name="language" id="language">
-      <option value="na">None</option>
-      <option value="en">English</option>
-      <option value="ru">Russian</option>
-      <option value="ko">Korean</option>
-    </select></div>
-<div id="jsonNull"></div>
-<table>
-  <tr>
-    <td></td>
-    <td><strong><br>Streamer</strong></td>
-    <td><strong>Solo<br>MMR</strong></td>
-  </tr>
-  <tr>
-    <td><div id="logo0"></div></td>
-    <td><div id="player0">Loading...</div></td>
-    <td><div id="mmr0"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo1"></div></td>
-    <td><div id="player1"></div></td>
-    <td><div id="mmr1"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo2"></div></td>
-    <td><div id="player2"></div></td>
-    <td><div id="mmr2"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo3"></div></td>
-    <td><div id="player3"></div></td>
-    <td><div id="mmr3"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo4"></div></td>
-    <td><div id="player4"></div></td>
-    <td><div id="mmr4"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo5"></div></td>
-    <td><div id="player5"></div></td>
-    <td><div id="mmr5"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo6"></div></td>
-    <td><div id="player6"></div></td>
-    <td><div id="mmr6"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo7"></div></td>
-    <td><div id="player7"></div></td>
-    <td><div id="mmr7"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo8"></div></td>
-    <td><div id="player8"></div></td>
-    <td><div id="mmr8"></div></td>
-  </tr>
-  <tr>
-    <td><div id="logo9"></div></td>
-    <td><div id="player9"></div></td>
-    <td><div id="mmr9"></div></td>
-  </tr>
-</table>
-<br>
-<div class="wrapper">
-  <p><div id="info">Last update: <span id="divTime"></span></p>
-  <p><a href="https://github.com/pauljickling/Dream-Stream">GitHub</a>  |  <a id="about">About</a></p></div>
-  <div data-role="popup" id="popupAbout">
-    <div id="popup">Dream Stream finds players on the Dota 2 leaderboards currently streaming on Twitch, and lists them by MMR.<span id="popup-btn-close">close</span></div>
-  <h6 id="license">Dream Stream is (c) 2016 Paul Jickling and made available under the MIT license.</h6>
+<h2>dream stream</h2>
+
+<ul class="navbar">
+  <li class="nav-item" id="rank">RANK</li>
+  <li class="nav-item" id="points">QUALIFYING<br> POINTS</li>
+</ul>
+<div class="container">
+
 </div>
+<ul class="navbar">
+  <li class="nav-item" id="time"></li>
+  <li class="nav-item"><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></li>
+  <li class="nav-item" id="about">ABOUT</li>
+</ul>
+<div id=license>Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</div>
+<div id="about-text"><span id="close-about"><img src="./close.png"></span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points. You can sort by either value.</div>
