--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,14 @@
 <h2>dream stream</h2>
+<div id="time"></div>
 
 <ul class="navbar">
-  <li class="nav-item" id="rank">RANK</li>
-  <li class="nav-item" id="points">QUALIFYING<br> POINTS</li>
+  <li class="nav-item" id="rank">RANK<br></li>
+  <li class="nav-item" id="points">QUALIFYING POINTS</li>
+  <li class="nav-item"><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></li>
+  <li class="nav-item" id="about">ABOUT</li>
 </ul>
 <div class="container">
 
 </div>
-<ul class="navbar">
-  <li class="nav-item" id="time"></li>
-  <li class="nav-item"><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></li>
-  <li class="nav-item" id="about">ABOUT</li>
-</ul>
 <div id=license>Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</div>
 <div id="about-text"><span id="close-about"><img src="./close.png"></span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points. You can sort by either value.</div>
