--- a/public/style.css
+++ b/public/style.css
@@ -15,8 +15,8 @@ body {
   margin: 0 auto;
   font-family: "Lato", sans-serif;
   font-size: 100%;
-  background-color: #000;
-  color: #FFF;
+  background-color: #102027;
+  color: #ffffff;
 }
 h2 {
   font-size: 1.5em;
@@ -36,10 +36,10 @@ li#time:hover {
 p {
   font-size: 1em;
   text-align: left;
+  line-height: 1.5;
 }
 .container {
   display: grid;
-  margin: 10px;
   margin-left: 25%;
   margin-right: 25%;
   grid-gap: 40px;
@@ -51,28 +51,39 @@ p {
 .navbar {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  margin: 10px;
   margin-left: 25%;
   margin-right: 25%;
-  padding: 10px;
+  background-color: #37474f;
+  border: 5px solid #62727b;
 }
 .nav-item {
-  flex: 1 0 100px;
-  max-width: 300px;
-  padding-left: 10px;
-  padding-right: 10px;
+  flex: 1 0 50px;
+  max-width: 250px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  align-self: center;
+  border: 5px solid #62727b;
+}
+.nav-item:hover {
+  background-color: #62727b;
 }
 .lang-dropdown {
   list-style:none;
   visibility: hidden;
 }
+.player-title {
+  font-size: 1.2em;
+}
 
 #license {
-  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  align-self: flex-end;
+  margin-right: 40px;
   padding-top: 5em;
-  text-align: right;
-  max-width: 350px;
 }
 
 #about-text {
@@ -94,4 +105,8 @@ span#close-about {
   padding-right: 10px;
   margin-top: -15px;
   margin-right: -15px;
+}
+
+#time {
+  margin-left: 20px;
 }
