Changed layout and created buttons

--- a/public/style.css
+++ b/public/style.css
@@ -27,14 +27,41 @@ img {
   height: auto;
   border: 1px solid #d3d3d3;
 }
-
-li.nav-item:hover {
-  text-decoration: underline;
-}
 p {
-  font-size: .9em;
+  font-size: .8em;
   text-align: left;
   line-height: 1.5;
+}
+.button {
+border-top: 1px solid #6d6e6e;
+background: #32566e;
+background: -webkit-gradient(linear, left top, left bottom, from(#757575), to(#32566e));
+background: -webkit-linear-gradient(top, #757575, #32566e);
+background: -moz-linear-gradient(top, #757575, #32566e);
+background: -ms-linear-gradient(top, #757575, #32566e);
+background: -o-linear-gradient(top, #757575, #32566e);
+padding: 10px 20px;
+-webkit-border-radius: 0px;
+-moz-border-radius: 0px;
+border-radius: 0px;
+-webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+-moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+box-shadow: rgba(0,0,0,1) 0 1px 0;
+text-shadow: rgba(0,0,0,.4) 0 1px 0;
+font-family: "Lato", sans-serif;
+font-size: 1em;
+color: white;
+text-decoration: none;
+vertical-align: middle;
+}
+.button:hover {
+   border-top-color: #587385;
+   background: #587385;
+   color: #ccc;
+}
+.button:active {
+   border-top-color: #64a7d4;
+   background: #64a7d4;
 }
 .container {
   display: grid;
@@ -50,60 +77,45 @@ p {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  margin-left: 5px;
-  margin-right: 5px;
-  background-color: #37474f;
-  border: 5px solid #62727b;
+  align-items: flex-start;
+  background-color: #32566e;
 }
-
 .nav-item {
-  display: flex;
-  flex: 1 0 50px;
-  max-width: 250px;
-  margin: 10px;
-  padding: 10px;
+  padding: 2px;
   text-align: center;
-  align-self: center;
-  border: 5px solid #62727b;
-}
-.nav-item:hover {
-  background-color: #62727b;
 }
 .player-title {
   font-size: 1.2em;
 }
-
 #license {
   display: flex;
+  flex-direction: column;
   justify-content: flex-end;
   align-self: flex-end;
+  align-items: flex-end;
   margin-left: minmax(300px, 75%);
   margin-right: 10px;
   padding-top: 5em;
 }
-
+#about:hover {
+  text-decoration: underline;
+}
 #about-text {
-  background-color: white;
-  color: black;
+  background-color: gray;
   border: 5px solid black;
   position: fixed;
-  margin-left: 45%;
-  margin-right: 45%;
-  padding: 20px;
-  top: 200px;
-  font-size: 1.2em;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding-left: 5px;
+  min-width: 280px;
+  top: 25px;
+  font-size: 1.1em;
   visibility: hidden;
 }
-
 span#close-about {
   float: right;
   padding-left: 10px;
-  padding-right: 10px;
-  margin-top: -15px;
-  margin-right: -15px;
 }
-
 #time {
   margin-left: 20px;
 }
@@ -115,5 +127,9 @@ span#close-about {
   .navbar {
     margin-left: 25%;
     margin-right: 25%;
+  }
+  #about-text {
+    margin-left: 45%;
+    margin-right: 45%;
   }
 }
