--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,16 +3,13 @@
 <ul class="navbar">
   <li class="nav-item"><button type="button" class="button" id="rank">RANK</button></li>
   <li class="nav-item" id="points"><button type="button" class="button" id="points">POINTS</button></li>
-  <!--
-  <li class="nav-item"><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></li>
-  <li class="nav-item" id="about">ABOUT</li> -->
 </ul>
 <div class="container">
 
 </div>
-<div id="license">
+<div id="lower">
   <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
   <p id="about">ABOUT</p>
-  <p>Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</p>
+  <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</p>
 </div>
 <div id="about-text"><span id="close-about"><img src="./close.png"></span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points. You can sort by either value.</div>
