--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
 <div id="time"></div>
 <ul class="navbar">
   <li class="nav-item"><button type="button" class="button" id="rank">RANK</button></li>
-  <li class="nav-item" id="points"><button type="button" class="button" id="points">POINTS</button></li>
+  <li class="nav-item"><button type="button" class="button" id="points">POINTS</button></li>
 </ul>
 <div class="container">
 
