--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,9 +7,11 @@
 <div class="container">
 
 </div>
-<div id="lower">
-  <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
-  <p id="about">ABOUT</p>
+<div class="container">
+  <div id="lower">
+    <p><a href="https://github.com/pauljickling/Dream-Stream"><img src="./github.png" id="github-logo"></a></p>
+    <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
+  </div>
+  <p><span id="about">What is this?</span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points.</p>
   <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</p>
 </div>
-<div id="about-text"><span id="close-about"><img src="./close.png"></span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points. You can sort by either value.</div>
