--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,6 @@
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
-
 a {
   text-decoration: none;
   color: white;
@@ -20,39 +19,30 @@ body {
 }
 h2 {
   font-size: 1.5em;
-  margin-left: 40px;
 }
 img {
   max-width: 100%;
   height: auto;
   border: 1px solid #d3d3d3;
 }
-
 img#github-logo {
   border: none;
+  padding-right: 10px;
 }
 p {
   font-size: 1em;
   text-align: left;
   line-height: 1.5;
-  margin-left: 10px;
 }
 .button {
-border-top: 1px solid #6d6e6e;
+border: 0;
 background: #32566e;
-background: -webkit-gradient(linear, left top, left bottom, from(#757575), to(#32566e));
-background: -webkit-linear-gradient(top, #757575, #32566e);
-background: -moz-linear-gradient(top, #757575, #32566e);
-background: -ms-linear-gradient(top, #757575, #32566e);
-background: -o-linear-gradient(top, #757575, #32566e);
+background: -webkit-gradient(linear, left top, left bottom, from(#2AA4DB), to(#32566e));
+background: -webkit-linear-gradient(top, #2AA4DB, #32566e);
+background: -moz-linear-gradient(top, #2AA4DB, #32566e);
+background: -ms-linear-gradient(top, #2AA4DB, #32566e);
+background: -o-linear-gradient(top, #2AA4DB, #32566e);
 padding: 10px 20px;
--webkit-border-radius: 0px;
--moz-border-radius: 0px;
-border-radius: 0px;
--webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
--moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-box-shadow: rgba(0,0,0,1) 0 1px 0;
-text-shadow: rgba(0,0,0,.4) 0 1px 0;
 font-family: "Lato", sans-serif;
 font-size: 1em;
 color: white;
@@ -77,8 +67,13 @@ cursor: pointer;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   border-bottom: 5px solid #32566e;
 }
-.card {
-  padding: 10px;
+#cards {
+  margin-top: 40px;
+  padding-bottom: 40px;
+}
+#header-container {
+  margin-left: 25%;
+  margin-right: 25%;
 }
 .navbar {
   list-style: none;
@@ -88,10 +83,16 @@ cursor: pointer;
   background-color: #32566e;
   visibility: hidden;
 }
+
+li.nav-item:first-child {
+  margin-left: -40px;
+}
+
 .nav-item {
   padding: 2px;
   text-align: center;
 }
+
 .player-title {
   font-size: 1.2em;
 }
@@ -100,12 +101,10 @@ cursor: pointer;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-left: minmax(300px, 75%);
   margin-right: 10px;
-}
-
-#time {
-  margin-left: 40px;
 }
 
 #about {
@@ -119,8 +118,5 @@ cursor: pointer;
   }
   #license {
     padding-top: 20px;
-  }
-  #about {
-    padding-left: 20px;
   }
 }
