--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,13 @@
-<h2>dream stream</h2>
-<div id="time"></div>
-<ul class="navbar">
-  <li class="nav-item"><button type="button" class="button" id="rank">RANK</button></li>
-  <li class="nav-item"><button type="button" class="button" id="points">POINTS</button></li>
-</ul>
-<div class="container">
-
+<div id="header-container">
+  <h2>dream stream</h2>
+  <div id="time"></div>
+  <ul class="navbar">
+    <li class="nav-item"><button type="button" class="button" id="rank">RANK</button></li>
+    <li class="nav-item"><button type="button" class="button" id="points">POINTS</button></li>
+  </ul>
+</div>
+<div class="container" id="cards">
+<!-- streamer cards here -->
 </div>
 <div class="container">
   <div id="lower">
