--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
 <!-- streamer cards here -->
 </div>
 <div class="container">
-  <div id="lower">
+  <div id="flex">
     <p><a href="https://github.com/pauljickling/Dream-Stream"><img src="./github.png" id="github-logo"></a></p>
     <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
   </div>
