--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,13 @@
-<div id="header-container">
-  <h2>dream stream</h2>
+<div class="wide-container" id="header-wide">
+  <div id="header-container">
+    <h2>dream stream</h2>
+  </div>
 </div>
-<div class="container" id="cards">
-<!-- streamer cards here -->
-</div>
+
+  <div class="container" id="cards">
+    <!-- streamer cards here -->
+  </div>
+<div class="wide-container">
 <div class="container">
   <div id="flex">
     <p><a href="https://github.com/pauljickling/Dream-Stream"><img src="./github.png" id="github-logo"></a></p>
@@ -11,4 +15,5 @@
   </div>
   <p><span id="about">What is this?</span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points.</p>
   <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</p>
+</div>
 </div>
