Added meta tag specifying http content

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,13 +2,13 @@
 <html lang="en-US">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>DREAM STREAM!</title>
 </head>
 <body>
     {{{body}}}
-<script src="./sort.js"></script>
 <script src="./loadjson.js"></script>
 </body>
 </html>
