--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div class="wide-container" id="header-wide">
   <div id="header-container">
-    <h2>dream stream</h2>
+    <img src="./baby_roshan.jpg" id="baby-roshan" alt="Baby Roshan logo. Image by Jennifer M. Potter"><h2>dream stream</h2>
   </div>
 </div>
 
@@ -10,10 +10,10 @@
 <div class="wide-container">
 <div class="container">
   <div id="flex">
-    <p><a href="https://github.com/pauljickling/Dream-Stream"><img src="./github.png" id="github-logo"></a></p>
+    <p><a href="https://github.com/pauljickling/Dream-Stream"><img src="./github.png" id="github-logo" alt="GitHub Logo"></a></p>
     <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
   </div>
   <p><span id="about">What is this?</span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points.</p>
-  <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license</p>
+  <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license. The Baby Roshan image is (c)2016 Jennifer Potter, and is used here with her permission.</p>
 </div>
 </div>
