--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,6 +14,6 @@
     <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
   </div>
   <p><span id="about">What is this?</span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points.</p>
-  <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license. Baby Roshan image by <a href="http://www.jennifermpotter.com/">Jennifer Potter</a>, and is used with her express permission.</p>
+  <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license. Baby Roshan image by <a href="http://www.jennifermpotter.com/" class="underline">Jennifer Potter</a>, and is used with her express permission.</p>
 </div>
 </div>
