Added service worker script

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,8 @@
 </head>
 <body>
     {{{body}}}
+<script src="./register.js"></script>
+<script src="./sw.js"></script>
 <script src="./loadjson.js"></script>
 </body>
 </html>
