--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="en-US" />
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#014d64" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <link rel="stylesheet" href="./style.css" />
   <title>Dream Stream</title>
 </head>
 <body>
