Added meta tag for site description

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#014d64" />
+  <meta name="Description" content="Dream Stream is a web app that displays players from the Dota 2 leaderboards that are currently streaming on twitch.tv">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css" />
