--- a/public/style.css
+++ b/public/style.css
@@ -6,8 +6,15 @@
 a {
   text-decoration: none;
   color: white;
+  outline: 0
 }
 a:hover {
+  text-decoration: underline;
+}
+a:active {
+  text-decoration: underline;
+}
+a:focus {
   text-decoration: underline;
 }
 a.underline {
