App now handles lack of leaderboard streamers

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
 </div>
 
   <div class="container" id="cards">
-    <!-- streamer cards here -->
+    <!-- streamer cards here, check console log for html output -->
   </div>
 <div class="wide-container">
 <div class="container">
