--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,12 +8,22 @@
     <!-- streamer cards here, check console log for html output -->
   </div>
 <div class="wide-container">
-<div class="container">
-  <div id="flex">
-    <p><a href="https://github.com/pauljickling/Dream-Stream"><img src="./github.png" id="github-logo" alt="GitHub Logo"></a></p>
-    <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
+  <div class="container">
+    <div id="flex">
+      <p><a href="https://github.com/pauljickling/Dream-Stream"><img src="./github.png" id="github-logo" alt="GitHub Logo"></a></p>
+      <p><a href="https://github.com/pauljickling/Dream-Stream">GITHUB</a></p>
+    </div>
+    <div class="details-box">
+      <details>
+        <summary>What is this?</summary>
+          <p>Dream Stream shows the Dota players from the leaderboards currently streaming on Twitch.</p>
+      </details>
+    </div>
+    <div class="details-box" id="license-box">
+      <details>
+        <summary>License Info</summary>
+          <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license. Baby Roshan image by <a href="http://www.jennifermpotter.com/" class="underline">Jennifer Potter</a>, and is used with her express permission.</p>
+      </details>
+    </div>
   </div>
-  <p><span id="about">What is this?</span><br>Dream Stream shows the Dota players currently streaming on Twitch that are on the leaderboard or have earned qualifying points.</p>
-  <p id="license">Dream Stream is (c)2016 Paul Jickling and made available under the MIT license. Baby Roshan image by <a href="http://www.jennifermpotter.com/" class="underline">Jennifer Potter</a>, and is used with her express permission.</p>
-</div>
 </div>
